--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
             I am <br />
             a Developer
           </p>
-          <p id="description">Web developer | Photographer | Video editor | </p>
-         <a href="" ><button id="button">My Resume</button></a>
         </div>
 
         <div id="image">
            <img src="resources/tech.gif ">
         </div>
+        <div id="b">
+          <p id="description">Web developer | Photographer | Video editor | </p>
+          <a href="" ><button id="button">My Resume</button></a>
+        </div>
+
       </div>
     </div>
   </body>
