--- a/resources/contact.html
+++ b/resources/contact.html
@@ -61,7 +61,7 @@
       <div id="content">
         <div id="title">
           <h1>Get In Touch</h1>
-          <p>___________________________________________</p>
+          <p id="line"></p>
           <p id="a">
             <b>Phone:</b>+91 9547196326<br />
             <b>Email:</b>bodhisatyaghosh@gmail.com
