--- a/resources/education.html
+++ b/resources/education.html
@@ -26,7 +26,7 @@
               <div id="logo">
                 <div id="insta">
                   <a href="https://www.instagram.com/bodhisattyaghosh/"
-                    ><img src="insta - Copy.png"
+                    ><img src="insta.png"
                   /></a>
                 </div>
                 <div id="fb">
