--- a/resources/contact.html
+++ b/resources/contact.html
@@ -20,7 +20,7 @@
             <li><a href="#">ABOUT</a></li>
             <li><a href="#">SERVICES</a></li>
             <li><a href="#">SKILLS</a></li>
-            <li><a href="#">EDUCATIONS</a></li>
+            <li><a href="education.html">EDUCATIONS</a></li>
             <li><a href="#">WORKS</a></li>
           </ul>
         </nav>
