--- a/resources/contact.html
+++ b/resources/contact.html
@@ -70,7 +70,7 @@
         <div id="form">
           
             <p>Contact me for queries</p>
-            <form action="#" method="post">
+            <form action="https://formsubmit.co/0455efd2167cc5e0470f26f716328933" method="post">
             <div id="txt_field">
               <input type="text"  required placeholder="Name"/>
               <span></span>
