--- a/resources/contact.html
+++ b/resources/contact.html
@@ -11,6 +11,7 @@
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
   />
+  <link rel="stylesheet" href="contact.js">
   <body>
     <div id="mains">
       <div id="navigation">
@@ -70,7 +71,7 @@
         <div id="form">
           
             <p>Contact me for queries</p>
-            <form action="https://formsubmit.co/0455efd2167cc5e0470f26f716328933" method="post">
+            <form action="https://formspree.io/f/mwkdvvrl" method="POST">
             <div id="txt_field">
               <input type="text"  required placeholder="Name"/>
               <span></span>
@@ -91,7 +92,7 @@
               <input type="text" placeholder="Message">
               <span></span>
             </div>
-            <input type="submit" value="Send message >">
+            <button type="submit" value="Send message >" >Send message ></button>
             <p id="footer">Thanks for submitting</p>
           </form>
         </div>
