--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!--Left section-->
       <div id="left_section">
         <div id="profile_img">
-          <img src="resources/img2.jpg" />
+          <img src="resources/portfolio.JPG" />
         </div>
 
         <div id="info">
@@ -36,8 +36,8 @@
 
         <footer>
           <p>
-            &copy;Copyright &COPY;2023 All rights reserved | This template is
-            made with &heartsuit; by BG
+            &copy;Copyright &COPY;2025 All rights reserved | This template is
+            made with &heartsuit; by Bodhisattya Ghosh
           </p>
         </footer>
       </div>
@@ -63,7 +63,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
       var typed = new Typed('#element', {
-        strings: ['Photographer ', 'Video ^700 editor ', 'Web ^700 designer', 'Web ^700  developer' ],
+        strings: ['Web ^700 designer', 'Web ^700  developer', 'Fullstack ^700  developer', 'React ^700  developer' ],
         typeSpeed: 50,
         smartBackspace: true, 
         loop: true,
