--- a/resources/education.html
+++ b/resources/education.html
@@ -55,7 +55,7 @@
               </p>
             </div>
           </div>
-          <div id="content">
+  <div id="content">
               <div id="title">
                  <h2>EDUCATION</h2>
               </div>
@@ -72,9 +72,9 @@
                    <div id="part2">
                     <i class="fa-solid fa-medal"></i>
                     <div id="text">
-                      <p id="year">2019</p>
-                      <p id="certificate">Photography Certificate</p>
-                      <p id="institution">Udemy</p>
+                      <p id="year">2024</p>
+                      <p id="certificate">Web Designing</p>
+                      <p id="institution">Online</p>
                     </div>
                    </div>
                 </div>
@@ -92,7 +92,7 @@
                     <div id="text">
                       <p id="year">2026</p>
                       <p id="certificate">B.Tech Certification</p>
-                      <p id="institution">I.E.M</p>
+                      <p id="institution">IEM</p>
                     </div>
                   </div>
                 </div>
@@ -102,20 +102,21 @@
                     <div id="text">
                       <p id="year">2024</p>
                       <p id="certificate">Web Development Certificate</p>
-                      <p id="institution">Online platform and others</p>
+                      <p id="institution">Internshala Trainings</p>
                     </div>
                   </div>
                   <div id="part2">
                     <i class="fa-solid fa-medal"></i>
                     <div id="text">
-                      <p id="year">XXXXXX</p>
-                      <p id="certificate">XXXXXXXX</p>
-                      <p id="institution">XXXXXXXXXXX</p>
+                      <p id="year">2024</p>
+                      <p id="certificate">React</p>
+                      <p id="institution">Internshala Trainings</p>
                     </div>
                   </div>
                 </div>
               </div>
           </div>
+        
     </div>
 </body>
 </html>
