--- a/resources/contact.html
+++ b/resources/contact.html
@@ -18,9 +18,8 @@
         <nav id="nav">
           <ul>
             <li><a href="../index.html">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">SERVICES</a></li>
-            <li><a href="#">SKILLS</a></li>
+      
+            <li><a href="skills.html">SKILLS</a></li>
             <li><a href="education.html">EDUCATIONS</a></li>
             <li><a href="#">WORKS</a></li>
           </ul>
