--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         <nav id="nav">
           <ul> 
             <li><a class="active" href="index.html">HOME</a></li>
-
-            <li><a href="#">SERVICES</a></li>
-            <li><a href="#">SKILLS</a></li>
+            <li><a href="resources/skills.html">SKILLS</a></li>
             <li><a href="resources/education.html">EDUCATIONS</a></li>
             <li><a href="#">WORKS</a></li>
             <li><a href="resources/contact.html">CONTACT</a></li>
